Update to remove projects which were changed to my fcc (freecodecamp) repo

--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 						<div class="project-overlay"></div>
 						<span>Text Cipher</span>
 				</a><!--
-				--><a href="quote-machine" class="project">
+				--><a href="/fcc/front-end/quote-machine" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/youtube-480.jpg 480w, images/youtube.jpg 960w" src="images/youtube.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
 						<div class="project-overlay"></div>
 						<span>YouTube API</span>
 				</a><!--
-				--><a href="tribute-page/" class="project">
+				--><a href="/fcc/front-end/tribute-page/" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/tribute-480.jpg 480w, images/tribute.jpg 960w" src="images/tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
 						<div class="project-overlay"></div>
 						<span>Responsive Design</span>
 				</a><!--
-				--><a href="wiki-viewer" class="project">
+				--><a href="/fcc/front-end/wiki-viewer" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/wiki-480.jpg 480w, images/wiki.jpg 960w" src="images/wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
 						<div class="project-overlay"></div>
 						<span>Wikipedia API</span>
