updated links to moved projects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="content-wrap">
 			<h2>Projects</h2>
 			<div class="projects-container">
-				<a href="wa-resources/" class="project">
+				<a href="/ear-training-app/" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/eq-480.jpg 480w, images/eq.jpg 960w" src="images/eq.jpg" class="project-image" alt="Screenshot of Web Audio project">
 						<div class="project-overlay"></div>
 						<span>Web Audio</span>
@@ -52,7 +52,7 @@
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
-				--><a href="cipher/" class="project">
+				--><a href="/cipher/" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/cipher-480.jpg 480w, images/cipher.jpg 960w" src="images/cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
 						<div class="project-overlay"></div>
 						<span>Text Cipher</span>
