--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					>
 					<div class="img-overlay"></div>
 				</div>
-				<p>Hi! I'm Howard, a front-end developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me writing a lot of JavaScript. Due to my interest in music, I've built a couple of web apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and some experience with Django for the back end. You can view some of my work in the portfolio below.
+				<p>Hi! I'm Howard, a JavaScript developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me thinking and solving problems. Due to my interest in music, I've built a couple of apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and experience with Django for the back end. You can view some of my work in the portfolio below.
 				<br>
 				<span><a href="https://github.com/ivthefourth">GitHub</a></span><span><a href="howardshaw.pdf">Résumé</a></span></p>
 			</div>
@@ -52,6 +52,16 @@
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
+				--><a href="/rec-ninja/" class="project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/rec-480.jpg 480w, images/rec-960.jpg 960w" src="images/rec-480.jpg" class="project-image" alt="Screenshot of responsive design project">
+						<div class="project-overlay"></div>
+						<span>Google Maps APIs</span>
+				</a><!--
+				--><a href="/fcc/front-end/calculator" class="project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/calc-480.jpg 480w, images/calc-960.jpg 960w" src="images/calc-480.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
+						<div class="project-overlay"></div>
+						<span>Calculator</span>
+				</a><!--
 				--><a href="/cipher/" class="project">
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/cipher-480.jpg 480w, images/cipher.jpg 960w" src="images/cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
 						<div class="project-overlay"></div>
@@ -61,16 +71,6 @@
 						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/youtube-480.jpg 480w, images/youtube.jpg 960w" src="images/youtube.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
 						<div class="project-overlay"></div>
 						<span>YouTube API</span>
-				</a><!--
-				--><a href="/fcc/front-end/tribute-page/" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/tribute-480.jpg 480w, images/tribute.jpg 960w" src="images/tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
-						<div class="project-overlay"></div>
-						<span>Responsive Design</span>
-				</a><!--
-				--><a href="/fcc/front-end/wiki-viewer" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/wiki-480.jpg 480w, images/wiki.jpg 960w" src="images/wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
-						<div class="project-overlay"></div>
-						<span>Wikipedia API</span>
 				</a>
 			</div>
 		</div>
